[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Options.gd" type="Script" id=2]

[node name="Options" type="Node2D"]
script = ExtResource( 2 )

[node name="FocusControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../CenterContainer/VBoxContainer/MusicContainer/MusicSlider")
focus_neighbour_top = NodePath("../CenterContainer/VBoxContainer/MusicContainer/MusicSlider")
focus_neighbour_right = NodePath("../CenterContainer/VBoxContainer/MusicContainer/MusicSlider")
focus_neighbour_bottom = NodePath("../CenterContainer/VBoxContainer/MusicContainer/MusicSlider")
focus_next = NodePath("../CenterContainer/VBoxContainer/MusicContainer/MusicSlider")
focus_previous = NodePath("../CenterContainer/VBoxContainer/MusicContainer/MusicSlider")
focus_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 704.0
margin_top = 398.0
margin_right = 1216.0
margin_bottom = 682.0
theme = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 32.0
theme = ExtResource( 1 )
text = "Options"
align = 1

[node name="MusicContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 512.0
margin_bottom = 84.0
theme = ExtResource( 1 )

[node name="MusicLabel" type="Label" parent="CenterContainer/VBoxContainer/MusicContainer"]
margin_right = 181.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/MusicContainer"]
margin_left = 331.0
margin_right = 512.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../../BackButton")
focus_neighbour_bottom = NodePath("../../SoundContainer/SoundSlider")
focus_next = NodePath("../../SoundContainer/SoundSlider")
focus_previous = NodePath("../../BackButton")
size_flags_horizontal = 3
max_value = 10.0

[node name="SoundContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 512.0
margin_bottom = 136.0
theme = ExtResource( 1 )

[node name="SoundLabel" type="Label" parent="CenterContainer/VBoxContainer/SoundContainer"]
margin_right = 181.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SoundContainer"]
margin_left = 331.0
margin_right = 512.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../../MusicContainer/MusicSlider")
focus_neighbour_bottom = NodePath("../../BackButton")
focus_next = NodePath("../../BackButton")
focus_previous = NodePath("../../MusicContainer/MusicSlider")
size_flags_horizontal = 3
max_value = 10.0

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 512.0
margin_bottom = 284.0
rect_min_size = Vector2( 512, 128 )
focus_neighbour_top = NodePath("../SoundContainer/SoundSlider")
focus_neighbour_bottom = NodePath("../MusicContainer/MusicSlider")
focus_next = NodePath("../MusicContainer/MusicSlider")
focus_previous = NodePath("../SoundContainer/SoundSlider")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Back"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/SoundContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
